set the border navbar and edit the navbar menu

--- a/Smartphones.html
+++ b/Smartphones.html
@@ -21,28 +21,28 @@
 
 <body class="bg-gray-500 max-h-full">
     <!---nav-->
-    <div class="bg-gray-700 w-full fixed text-white">
+    <div class="bg-gray-700 w-full fixed text-white border  hover:border-blue-500">
         <div class="container mx-auto flex justify-between h-12">
             <div class="my-auto">
                 <a class="" href="#smartphones">Smartphones</a>
             </div>
-            <div class="grid grid-cols-3 gap-10">
-                <a class="hover:bg-blue-400 text-center pt-2" href="">Feactures</a>
-                <a class="hover:bg-blue-400 text-center pt-2" href="">Popular brands</a>
-                <a class="hover:bg-blue-400 text-center pt-2" href="">Famous apps</a>
+            <div class="grid grid-cols-3 ">
+                <a class="hover:bg-blue-400 text-center p-2 mx-auto" href="">Feactures</a>
+                <a class="hover:bg-blue-400 text-center p-2 mx-auto" href="">Popular brands</a>
+                <a class="hover:bg-blue-400 text-center p-2 mx-auto" href="">Famous apps</a>
             </div>
         </div>
     </div>
     <!---header-->
     <div class="bg-purple-300 parallax w-full h-full">
         <h2 id="smartphones" class="uppercase w-full font-bold text-6xl pt-40 text-center">smartphones</h2>
-        <div class="w-full grid grid-cols-2 gap-10 m-auto py-10">
-            <div class="">
+        <div class="w-full grid grid-cols-2 gap-10 m-auto py-10 px-20">
+            <div class="text-center">
                 <p class="m-0 transition duration-200 ease-in-out hover:bg-gray-200 transform hover:-translate-y-1 hover:scale-110">
                     Un texto es una composición de signos codificados en un sistema de escritura que forma una unidad de sentido. También es una composición de caracteres imprimibles generados por un algoritmo de cifrado que, aunque no tienen sentido para cualquier persona
                 </p>
             </div>
-            <div class="">
+            <div class="text-center">
                 <p class="m-0 transition duration-200 ease-in-out hover:bg-gray-200 transform hover:-translate-y-1 hover:scale-110">
                     Un texto es una composición de signos codificados en un sistema de escritura que forma una unidad de sentido. También es una composición de caracteres imprimibles generados por un algoritmo de cifrado que, aunque no tienen sentido para cualquier persona
                 </p>
